src/features/VisualNovel/pages/VisualNovelPage/VisualNovelPage.module.css
/*
 * TODO (Sotnichenko): Adopt scrollbar library
 * Nearly all sub routes make page scrollable,
 * so to prevent screen size flicking we add scrollbar for all pages.
 */
html {
  overflow-y: scroll;
}

.page {
  padding-top: var(--chakra-sizes-8);
  display: flex;
  flex-direction: column;
  gap: var(--chakra-sizes-4);
  overflow: hidden;
}

.header {
  display: flex;
  flex-direction: column;
  gap: var(--chakra-sizes-4);
}

.overview {
  padding: 0 var(--chakra-sizes-10);
  display: grid;
  grid-template-columns: var(--chakra-sizes-48) 1fr;
  gap: var(--chakra-sizes-8);
}

.info {
  display: flex;
  flex-direction: column;
  gap: var(--chakra-sizes-6);
}

.image {
  height: auto;
  max-height: var(--chakra-sizes-80);
  object-fit: cover;
  border-radius: var(--chakra-radii-lg);
}

.heading {
  display: flex;
  gap: var(--chakra-sizes-4);
  align-items: flex-start;
}

.title {
  display: flex;
  flex-direction: column;
}

.controls {
  display: flex;
  gap: var(--chakra-sizes-4);
  align-items: center;
}

.tabContent {
  padding: 0 var(--chakra-sizes-10);
}

